# System-SL

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  build.py  main.py  pyproject.toml  requirements.txt  tasks.json
.ipynb_checkpoints/: README-checkpoint.md
backend/: main.py  tasks.json
data/: completed_tasks.json  tasks.json  user_info.json
demo-data/: completed_tasks.json  tasks.json  user_info.json
src/cli/: main.py
src/core/: agent.py  calendar.py  llm_wiki_agent.py  onboarding.py  persona_vector.py  reddit_scrape.py  tasks.py  user_info.py
src/core/api/: main.py
src/core/scrape_content/: reddit_content.md
src/knowledge_base/: Instruction.md
src/knowledge_base/.obsidian/: workspace.json
src/knowledge_base/raw/: reddit_content.md
src/knowledge_base/templates/: page-template.md
src/knowledge_base/wiki/: AI_Market_News.md  GPU_Hardware_Trends.md  LLM_Training_Resources.md  Qwen2.5 Optimization.md  RAG_Production_Patterns.md  index.md  log.md  reddit_news_2026_05_14.md
src/scrape/: hacker_news.py  rssscrape.py  tempCodeRunnerFile.py
src/system_sl/chatbot/: __init__.py  client.py  config.py  system_adi.py  system_prompts.py  tools.py
src/system_sl/cli/: main.py  my_main.py
src/system_sl/core/: __init__.py  calendar.py  my_onboarding.py  my_sync_service.py  my_tasks.py  my_user_info.py  onboarding.py  prioritization.py  priority_engine_new.py  sync_service.py  tasks.py  tempCodeRunnerFile.py  user_info.py  vector_converter.py
src/system_sl/frontend/cli/: main.py
src/system_sl/frontend/gui/: chat_panel.py  main.py  popup_windows.py  theme.py
src/system_sl/gui/: chat_panel.py  main.py  popup_windows.py
src/system_sl/my_chatbot/: __init__.py  my_client.py  my_config.py  system_adi.py
src/system_sl/services/: __init__.py  background_service.py
src/system_sl/utils/: __init__.py  audio_manager.py  build.py  google_api.py  install.py  json_client.py  notifications_ui.py  paths.py  theme_gen.py  theme_manager.py  wallpaper_path.py
src/ui/: notification.html  theme.css
src/utils/: autostart.py  install.py  notifications.py
